2011-01-07  Takashi Toyoshima  <toyoshim@google.com>

Reviewed by Kenneth Russell.

        cleanupAfterGraphicsCall() is never called in
        WebGLRenderingContext::checkFramebufferStatus()
        https://bugs.webkit.org/show_bug.cgi?id=51668

        No new tests. This is a trivial bug.

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::checkFramebufferStatus):


Canonical link: https://commits.webkit.org/65572@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75251 268f45cc-cd09-0410-ab3c-d52691b4dbfc